# pregonero

./: .editorconfig  .envrc.example  .gitignore  Cargo.toml  Makefile  README.md  TODO.md  accounts.example.json  docker-compose.yaml
.githooks/: pre-commit
.github/workflows/: container.yaml  deployment.yaml  test.yaml  validate.yaml
src/: client.rs  codecs.rs  config.rs  email.rs  fixtures.rs  main.rs  queue.rs  rfc.rs  store.rs
src/imap/: codecs.rs  connection.rs  mod.rs  parsers.rs
tests/: README.md
