[package]
name = "pregonero"
version = "0.1.0"
authors = ["Dario Blanco Iturriaga"]
edition = "2021"

[dependencies]
anyhow = "1"
async-imap = { version = "0.9.0", default-features = false, features = ["runtime-tokio"] }
async-native-tls = { version = "0.5.0", default-features = false, features = ["runtime-tokio"] }
encoding = "0.2.33"
futures = "0.3.28"
html2text = "0.6.0"
itertools = "0.11.0"
mailparse = "0.14.0"
quoted_printable = "0.5.0"
redis = { version = "0.23", features = ["aio", "tokio-comp"] }
regex = "1.9.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lib]
name = "pregonero"
path = "src/main.rs"
